--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -56,8 +56,8 @@
   {{/*  theme color ends  */}}
 
   {{/*  use blur theme  */}}
-  {{ if ne .Site.Params.useBlur false }}
-    .blur, header:hover, .card, 
+  {{ if .Site.Params.useBlur }}
+    .blur, .card, 
     .searchbox form:hover, 
     .searchbox form:focus-within, 
     .search-group-list, 
@@ -67,17 +67,17 @@
       box-shadow: 0 0 10px rgb(0, 0, 0, 0.3);
     }
   {{ else }}
-    .card {
-      background-color: rgba(0, 0, 0, 0.08);
-    }
-
-    .blur, header:hover, 
-    .search-group-list, 
+    .card,
     .searchbox form:hover, 
     .searchbox form:focus-within, 
     .search-engines input:hover+label span,
     .search-engines input:checked+label span {
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: rgba(0, 0, 0, 0.08);
+    }
+
+    .blur, 
+    .search-group-list {
+      background-color: rgba(0, 0, 0, 0.3);
     }
   {{ end }}
   {{/*  use blur theme ends  */}}
